fix bugs on mobile

--- a/front/styles/index.styl
+++ b/front/styles/index.styl
@@ -2,8 +2,7 @@
 @import "./icon"
 @import "./mixin"
 body
-	padding-top h(20)
-	background-color #000
+	position fixed
 .page
 	overflow-y scroll
 	&.with-both
